# aicpput

./: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
python_backend/: __init__.py  cpp_parser.py  knowledge_graph.py  memory_store.py  model_client.py  service.py  test_generator.py  types.py
src/: extension.ts  sidebarProvider.ts  types.ts
src/modules/: coverageRunner.ts  cppParser.ts  knowledgeGraph.ts  memory.ts  modelClient.ts  pythonBackendClient.ts  testGenerator.ts
